<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/register_auth"
        android:layout_width="157dp"
        android:layout_height="51dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textColor="#55752D"
        android:textSize="40sp"
        android:lineSpacingExtra="-30sp"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/parent_guardian_auth"
        android:layout_width="334dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/Parent_Guardian"
        android:textColor="#D9784A"
        android:textSize="24sp"
        android:lineSpacingExtra="-10sp"
        android:gravity="center_vertical"
        />

    <EditText
        android:id="@+id/enterEmail_auth"
        android:layout_width="331dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:textColorHint="#A0A0A0"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_bg"/>

    <EditText
        android:id="@+id/enterUsername_auth"
        android:layout_width="331dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:layout_gravity="center"
        android:hint="@string/enter_username"
        android:textColorHint="#A0A0A0"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_bg"/>

    <EditText
        android:id="@+id/enterPassword_auth"
        android:layout_width="331dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textColorHint="#A0A0A0"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_bg"/>

    <EditText
        android:id="@+id/confirmPassword_auth"
        android:layout_width="331dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="#A0A0A0"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_bg"/>

    <Button
        android:id="@+id/register_button_2_auth"
        android:layout_width="331dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/dark_green_button"
        android:elevation="4dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:padding="20dp">

        <TextView
            android:id="@+id/alreadyHaveAcc_auth"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/sign_in_now_auth"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="3dp"
            android:textSize="20sp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="#D9784A" />
    </LinearLayout>
</LinearLayout>