<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="40dp"
            android:text="@string/hello"
            android:textColor="#55752D"
            android:textSize="40sp"
            android:lineSpacingExtra="-30sp"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="40dp"
            android:text="@string/user"
            android:textColor="#55752D"
            android:textSize="40sp"
            android:lineSpacingExtra="-30sp"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/face"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="40dp"
            android:text="@string/smileyFace"
            android:textColor="#55752D"
            android:textSize="40sp"
            android:lineSpacingExtra="-30sp"
            android:gravity="center_vertical"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/sign_out"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/light_green_button"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/sign_out" />

        <Button
            android:id="@+id/edit_profile_btn"
            android:layout_width="163dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:background="@drawable/light_green_button"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/edit_profile" />




    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/view_3d"
            android:layout_width="142dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:drawableTop="@drawable/_3d"
            android:padding="5dp"
            android:background="@drawable/dark_green_button"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="View in 3D" />

        <Button
            android:id="@+id/stories_btn"
            android:layout_width="142dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:drawableTop="@drawable/book"
            android:padding="5dp"
            android:background="@drawable/orange"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/stories" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="horizontal"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/take_photo"
            android:layout_width="118dp"
            android:layout_weight="1"
            android:layout_height="118dp"
            android:drawableTop="@drawable/camera_icon"
            android:padding="5dp"
            android:background="@drawable/orange"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/take_photo" />

        <Button
            android:id="@+id/view_photos"
            android:layout_width="163dp"
            android:layout_weight="1"
            android:layout_height="118dp"
            android:layout_marginStart="30dp"
            android:drawableTop="@drawable/album_icon"
            android:padding="5dp"
            android:background="@drawable/dark_green_button"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/view_photos" />
    </LinearLayout>








</LinearLayout>