<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activ_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="400dp"
        app:srcCompat="@drawable/fairy_image"
        android:contentDescription="@string/fairy_image"
        android:elevation="4dp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="206dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/dark_green_button"
        android:elevation="4dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/register" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="206dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/light_green_button"
        android:elevation="4dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/sign_in" />




</LinearLayout>