<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stories_bg"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/stories"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        android:text="@string/stories"
        android:textColor="#55752D"
        android:textSize="40sp"
        android:lineSpacingExtra="-30sp"
        android:gravity="center_vertical"
        app:drawableRightCompat="@drawable/audio" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#A0A0A0"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/parent_guardian"
        android:layout_width="334dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/Fairy_Audio"
        android:textColor="#D9784A"
        android:textSize="24sp"
        android:lineSpacingExtra="-10sp"
        android:gravity="center_vertical"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingEnd="32dp"
        tools:ignore="RtlSymmetry">

        <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/play"
            android:drawableEnd="@drawable/play"
            android:background="@drawable/light_green_button"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/pause_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pause"
            android:drawableEnd="@drawable/pause"
            android:background="@drawable/light_green_button"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/restart_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/restart"
            android:drawableEnd="@drawable/restart"
            android:background="@drawable/light_green_button"
            android:elevation="4dp"
            android:textAllCaps="false"
            android:textSize="20sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#A0A0A0"
        android:layout_marginTop="20dp"
        />





</LinearLayout>